--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-```json
 {
-  "name": "team-segeltorp",
+  "name": "expo-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -16,16 +15,13 @@
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
+    "expo-haptics": "~14.0.0",
     "expo-image": "~2.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.7",
-    "expo-notifications": "^0.29.13",
-    "expo-print": "~14.0.3",
     "expo-router": "~4.0.17",
-    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -40,7 +36,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -50,4 +46,3 @@
   },
   "private": true
 }
-```
